--- a/src/partials/banner.html
+++ b/src/partials/banner.html
@@ -1,8 +1,8 @@
 <div class="swiper">
     <div class="swiper-wrapper">
-        <div class="swiper-slide">
+        <div class="swiper-slide ">
             <div
-                class="flex flex-col justify-center md:95 xl:h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto mt-0 xl:-mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
+                class="flex flex-col justify-center xl:h-210 max-w-2xl xl:max-w-6xl w-full ml-auto mr-auto mt-0 xl:-mt-4 pl-5 pr-5 xl:pl-19.5 xl:pr-20 relative">
                 <div class="max-w-50 md:max-w-55 xl:max-w-134 mt-51.25 ml-auto mr-auto md:mt-35.75  md:ml-22.25 xl:ml-0.25 xl:-mt-22.25">
                     <h1 class="text-base md:text-lg xl:text-40 font-comfortaa font-bold leading-4.75 md:leading-5 xl:leading-11.25 -ml-2.5 md:ml-0.25 xl:-ml-0.25">Сервис правильного
                         питания.
