--- a/src/style.css
+++ b/src/style.css
@@ -67,7 +67,9 @@
     --color-blue-100: #F5FAFF;
     --color-blue-200: #DEE6EE;
     --color-blue-300: #F4F9FE;
+    --color-blue-400: #E5E5E5;
     --color-grey-950: #020202;
+    --container-5xl: calc(70.3rem + 160px);
     --container-6xl: calc(73.75rem + 160px);
     --container-2xl: calc(43.125rem + 40px);
     --shadow-md: 0 0 20px 0 #5656564d;
