--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,40 +1,40 @@
-<div class="flex max-w-2xl xl:max-w-5xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 xl:h-55 bg-blue-100/80 relative rounded-4xl shadow-xl xl:mt-29.25">
-    <div class="flex ml-auto mr-auto gap-6.75 justify-center items-center relative xl:before:size-136 before:absolute before:rounded-full before:bg-green-500/10 xl:before:-left-293.75 xl:before:top-5.25">
-        <div class="flex flex-col gap-5 absolute xl:top-11 xl:-left-145 items-center">
-            <svg class="xl:size-15.75 xl:-ml-0.75">
+<div class="flex max-w-1xl xl:max-w-5xl w-full ml-auto mr-auto pl-5 pr-5 xl:pl-19.5 xl:pr-20 md:h-29.5 xl:h-55 bg-amber-500 md:bg-blue-100/80 relative rounded-4xl shadow-xl md:-mt-106.5 xl:mt-29.25">
+    <div class="flex ml-auto mr-auto gap-6.75 justify-center items-center relative xl:before:size-136 xl:before:absolute xl:before:rounded-full xl:before:bg-green-500/10 xl:before:-left-293.75 xl:before:top-5.25">
+        <div class="flex flex-col md:gap-2.75 xl:gap-5 absolute md:top-5.75 xl:top-11 md:-left-78.25 xl:-left-145.25 items-center">
+            <svg class="md:size-8.5 xl:size-15.75 xl:-ml-0.75">
                 <use href="#icon-advantages-eco"></use>
             </svg>
-            <span class="font-montserrat text-xs font-medium text-center xl:w-36">Бережём природу. Эко-тара и проборы.</span>
+            <span class="font-montserrat md:text-4xs xl:text-xs font-medium text-center md:w-19.25 xl:w-36 md:leading-2.25 xl:leading-4">Бережём природу. Эко-тара и проборы.</span>
         </div>
-        <div class="flex flex-col gap-5 items-center absolute xl:top-10.25 xl:-left-102.75">
-            <svg class="xl:size-16.5 xl:ml-0.5">
+        <div class="flex flex-col md:gap-2.75 xl:gap-5 items-center absolute md:top-5.25 xl:top-10.25 md:-left-55.5 xl:-left-102.75">
+            <svg class="md:size-9 xl:size-16.5 xl:ml-0.5">
                 <use href="#icon-advantages-dishes"></use>
             </svg>
-            <span class="font-montserrat text-xs font-medium text-center xl:w-44">28 дней без повторения, более 300 блюд!</span>
+            <span class="font-montserrat md:text-4xs xl:text-xs font-medium text-center md:w-23.5 xl:w-44 md:leading-2.25 xl:leading-4">28 дней без повторения, более 300 блюд!</span>
         </div>
-        <div class="flex flex-col gap-5 items-center absolute xl:top-9.5 xl:-left-51.75">
-            <svg class="xl:size-17.5">
+        <div class="flex flex-col md:gap-2.5 xl:gap-4.75 items-center absolute md:top-5.5 xl:top-9.5 md:-left-28 xl:-left-51.75">
+            <svg class="md:size-9 xl:size-17.5">
                 <use href="#icon-advantages-ingredient"></use>
             </svg>
-            <span class="font-montserrat text-xs font-medium text-center xl:max-w-39.75">Бесплатно заменяем блюда и ингредиенты.</span>
+            <span class="font-montserrat md:text-4xs xl:text-xs font-medium text-center md:w-21.25 xl:min-w-39.75 md:leading-2.25 xl:leading-4">Бесплатно заменяем блюда и ингредиенты.</span>
         </div>
-        <div class="flex flex-col gap-3.75 items-center absolute xl:top-12.25 xl:-left-3.25">
-            <svg class="xl:size-15.75">
+        <div class="flex flex-col md:gap-2.75 xl:gap-3.75 items-center absolute md:top-6 xl:top-12.25 md:-left-3 xl:-left-3.25">
+            <svg class="md:size-8.25 xl:size-15.75">
                 <use href="#icon-advantages-night"></use>
             </svg>
-            <span class="font-montserrat text-xs font-medium text-center xl:w-47.75">Готовим ночью, упаковываем и отправляем Вам!</span>
+            <span class="font-montserrat md:text-4xs xl:text-xs font-medium text-center md:w-27.75 xl:w-47.75 md:leading-2.25 xl:leading-4">Готовим ночью, упаковываем и отправляем Вам!</span>
         </div>
-        <div class="flex flex-col gap-1 items-center absolute xl:top-5.5 xl:left-54.75">
-            <svg class="xl:size-25">
+        <div class="flex flex-col md:gap-0.5 xl:gap-1.25 items-center absolute md:top-3 xl:top-5.5 md:left-28.5 xl:left-55.25">
+            <svg class="md:size-13.5 xl:size-25">
                 <use href="#icon-advantages-car"></use>
             </svg>
-            <span class="font-montserrat text-xs font-medium text-center xl:w-36.5">Ежедневная удобная и бесплатная доставка с 6:00 до 10:00</span>
+            <span class="font-montserrat md:text-4xs xl:text-xs font-medium text-center md:w-21.25 xl:w-36.5 md:leading-2.25 xl:leading-4">Ежедневная удобная и бесплатная доставка с 6:00 до 10:00</span>
         </div>
-        <div class="flex flex-col gap-5 items-center absolute xl:top-9.25 xl:left-101.75">
-            <svg class="xl:size-17.25">
+        <div class="flex flex-col md:gap-3 xl:gap-5 items-center absolute md:top-5 xl:top-9.25 md:left-53.5 xl:left-101.5">
+            <svg class="md:size-9 xl:size-17.25">
                 <use href="#icon-advantages-oclock"></use>
             </svg>
-            <span class="font-montserrat text-xs font-medium text-center xl:w-43">Сохраняем Вашу энергию и до 14 часов в неделю освобождая от готовки!</span>
+            <span class="font-montserrat md:text-4xs xl:text-xs font-medium text-center md:w-24.75 xl:w-43 md:leading-2.25 xl:leading-4">Сохраняем Вашу энергию и до 14 часов в неделю освобождая от готовки!</span>
         </div>
     </div>
 </div>
