--- a/src/style.css
+++ b/src/style.css
@@ -72,6 +72,7 @@
     --container-5xl: calc(70.3rem + 160px);
     --container-6xl: calc(73.75rem + 160px);
     --container-2xl: calc(43.125rem + 40px);
+    --container-1xl: calc(40.625rem + 40px);
     --shadow-md: 0 0 20px 0 #5656564d;
     --shadow-lg: 0 0 30px 0 #5656564d;
     --shadow-xl: 0 0 40px 0 #5656564d;
